--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,11 @@
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.title {
+  font-family: 'Open Sans', sans-serif;
+}
+
 .box-info {
   border: 1px solid blue;
 }
